<resources>
    <string name="app_name">Beats</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="inbox">Inbox</string>
    <string name="sent">SentItems</string>
    <string name="draft">Draft</string>
    <string name="trash">Trash</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>

    <string name="listen_now">Listen Now</string>
    <string name="music_library">Music Library</string>

    <string name="nav_open_drawer">Open Navigation Drawer</string>
    <string name="nav_close_drawer">Close Navigation Drawer</string>

    <string name="playlists">PLAYLISTS</string>
    <string name="artists">ARTISTS</string>
    <string name="albums">ALBUMS</string>
    <string name="songs">SONGS</string>
    <string name="genres">GENRES</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search Artist,Song and Album</string>

    <string name="shuffle">Shuffle</string>
    <string name="play_next">Play Next</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="goto_artist">Goto to artist</string>
    <string name="not_interested">Nor interested</string>
    <string name="edit_playlist">Edit playlist</string>
    <string name="delete">Delete</string>
    <string name="go_to_album">Go to album</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="playing_from">PLAYING FROM</string>

    <string name="new_playlist">NEW PLAYLIST</string>
    <string name="cancel">CANCEL</string>
    <string name="create_playlist">CREATE PLAYLIST</string>
    <string name="select_playlist">SELECT PLAYLIST</string>
    <string name="update">UPDATE</string>

    <string name="delete_message">Do you want to delete</string>
    <string name="playlist_updated">Playlist Updated</string>
    <string name="update_failed">Update Failed</string>
    <string name="removed_from_playlist">removed from playlist</string>



    <!--Shared transition values-->
    <string name="image_transition">AlbumImage:Transition</string>
</resources>
