<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/shuffle"
        android:title="@string/shuffle"
        />
    <item
        android:id="@+id/play_next"
        android:title="@string/play_next" />
    <item
        android:id="@+id/add_to_queue"
        android:title="@string/add_to_queue" />
    <item
        android:id="@+id/add_to_playlist"
        android:title="@string/add_to_playlist" />
    <item
        android:id="@+id/goto_artist"
        android:title="@string/goto_artist" />
    <item
        android:id="@+id/edit_playlist"
        android:title="@string/edit_playlist"/>
    <item
        android:id="@+id/delete"
        android:title="@string/delete"/>
</menu>